traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:27: error: not found: value ordMAa
  ecritMessage((ordMAa*absMax)-1)
                ^TraversalByLine:27: error: not found: value absMax
  ecritMessage((ordMAa*absMax)-1)
                       ^